--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -31,4 +31,14 @@
       }
     }
   }
+
+  &#contacts {
+    background-color: #080f18;
+
+    .section__title {
+      h2 {
+        color: #ffffff;
+      }
+    }
+  }
 }
