--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -321,7 +321,7 @@
       align-items: center;
       gap: clamp(15px, 3vw, 25px);
       border-radius: $defaultBorderRadius;
-      background-color: #080f18;
+      background-color: #323232;
       box-shadow: $shadow;
 
       p {
@@ -491,7 +491,7 @@
     }
 
     @media (max-width: 425px) {
-      margin: 0px -15px;
+      margin: 0px -10px;
     }
   }
 
@@ -1023,93 +1023,6 @@
 }
 
 .licensed {
-  &__wrapper {
-    display: flex;
-    gap: 20px;
-
-    @media (max-width: 880px) {
-      flex-direction: column-reverse;
-    }
-  }
-
-  &__info,
-  &__image {
-    width: calc(50% - 20px);
-
-    @media (max-width: 880px) {
-      width: 100%;
-    }
-  }
-
-  &__image {
-    @media (max-width: 880px) {
-      margin: 0 auto;
-      width: min(100%, 610px);
-    }
-
-    img {
-      border-radius: 8px;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      box-shadow: $shadow;
-
-      @media (max-width: 880px) {
-        max-height: 300px;
-      }
-
-      @media (max-width: 425px) {
-        max-height: 200px;
-      }
-    }
-  }
-
-  &__info,
-  &__title {
-    h2,
-    mark {
-      font-family: Inter;
-      font-size: clamp(22px, 3vw, 45px);
-      font-style: normal;
-      font-weight: 600;
-      line-height: normal;
-      color: $primaryTextColor;
-
-      mark {
-        background-color: transparent;
-        color: $primaryColor;
-      }
-    }
-  }
-
-  &__title {
-    display: none;
-    margin-bottom: 20px;
-
-    @media (max-width: 880px) {
-      display: block;
-    }
-  }
-
-  &__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 30px;
-
-    h2 {
-      @media (max-width: 880px) {
-        display: none;
-      }
-    }
-
-    p {
-      color: $primaryTextColor;
-      font-size: clamp(16px, 2vw, 24px);
-      font-weight: 400;
-    }
-  }
-
   &__items {
     display: flex;
     gap: 10px;
@@ -1144,47 +1057,43 @@
   }
 
   &__item {
-    flex: 1 1 calc(25% - 60px);
-    max-width: 310px;
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: $defaultBorderRadius;
-    box-shadow: $shadow;
+    flex: 1 1 calc(33% - 60px);
 
     @media (max-width: 1040px) {
       flex: 1 1 40%;
       max-width: initial;
     }
 
+    @media (max-width: 540px) {
+      flex: 1 1 100%;
+
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
+
+    h3, p, b {
+      color: $lightTextColor;
+    }
+
     h3 {
-      color: $primaryTextColor;
-      text-align: center;
-      font-size: clamp(18px, 2vw, 24px);
-      font-weight: 500;
+      font-size: clamp(16px, 2vw, 22px);
+      font-weight: 600;
       margin-bottom: 20px;
     }
 
-    ul {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
+    p {
+      font-size: clamp(16px, 2vw, 18px);
 
-      i {
-        svg {
-          width: 24px;
-          height: 24px;
-        }
+      b {
+        font-size: clamp(16px, 2vw, 18px);
+        display: inline-block;
+        font-weight: 600;
+        margin-bottom: 5px;
       }
 
-      li {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-
-        span {
-          color: $primaryTextColor;
-          font-size: clamp(16px, 2vw, 18px);
-        }
+      &:not(:last-child) {
+        margin-bottom: 20px;
       }
     }
   }
